--- a/decorators.html
+++ b/decorators.html
@@ -37,6 +37,7 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
         isStatic: boolean,
         descriptor: PropertyDescriptor,
         extras?: MemberDescriptor[]
+        finisher?: (klass): void;
       }
     </code></pre>
     <p>A <dfn>class decorator function</dfn> is a function which takes a constructor, heritage (parent class), and an array of MemberDescriptors that represent the instance and static members of the class.</p>
@@ -222,6 +223,7 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
           1. <ins>Let _static_ be IsStatic of _m_.</ins>
           1. <ins>If _m_'s |DecoratorList| is present, then let _decorators_ be the result of performing DecoratorListEvaluation of |DecoratorList|.</ins>
           1. <ins>Else, let _decorators_ be a new empty List.</ins>
+          1. <ins>Let _finishers_ be a new empty List.</ins>
           1. <ins>ReturnIfAbrupt(_decorators_).</ins>
           1. <ins>Let _el_ be the result of performing PropertyDefinitionEvaluation for _m_ with arguments _proto_, *false*.</ins>
           1. <ins>If _el_ is an abrupt completion, then</ins>
@@ -235,6 +237,7 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
         1. <ins>For each _element_ in order from _coalesced_</ins>
           1. <ins>Let _decorated_ be ? DecorateElement(_element_).</ins>
           1. <ins>Append _decorated_.[[Descriptor]] to the end of _elementDescriptors_.</ins>
+          1. <ins>Append all elements of _decorated_.[[Finishers]] to the end of _finishers_.</ins>
           1. <ins>For each _descriptor_ in order from _decorated_.[[Extras]].</ins>
             1. <ins>Append _descriptor_ to the end of _elementDescriptors_.</ins>
         1. <ins>Let _constructorInfo_ be the result of performing DefineMethod for _constructor_ with _constructorParent_ as the optional _functionPrototype_ argument.</ins>
@@ -242,13 +245,14 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
         1. <ins>Let _originalF_ be _constructorInfo_.[[Closure]].</ins>
         1. <ins>Let _F_ be MakeUninitializedConstructor(_originalF_).</ins>
         1. <ins>Let _result_ be ? DecorateClass(_F_, _constructorParent_, _elementDescriptors_).</ins>
+        1. <ins>Append all elements of _result_.[[Finishers]] to the end of _finishers_.</ins>
         1. <ins>Let _constructor_ be _result_.[[Constructor]].</ins>
         1. <ins>Let _elements_ be _result_.[[Elements]].</ins>
         1. <ins>If |ClassHeritage?| is present and _protoParent_ is not *null*, then set _constructor_'s [[ConstructorKind]] internal slot to `"derived"`.</ins>
         1. <ins>Perform MakeConstructor(_constructor_, *false*, _proto_).</ins>
         1. <ins>Perform MakeClassConstructor(_constructor_).</ins>
         1. <ins>Perform CreateMethodProperty(_proto_, `"constructor"`, _constructor_).</ins>
-        1. <ins>For each _descriptor_ in order from _elements_</ins>
+        1. <ins>For each _descriptor_ in order from _elements_, do</ins>
           1. <ins>Assert: _descriptor_.[[Kind]] is `"property"`</ins>
           1. <ins>If _descriptor_.[[Static]] is *false*, then</ins>
             1. <ins>Let _status_ be DefinePropertyOrThrow(_proto_, _descriptor_.[[Key]], _descriptor_.[[Descriptor]])</ins>
@@ -262,8 +266,8 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
         1. Set the running execution context's LexicalEnvironment to _lex_.
         1. If _className_ is not *undefined*, then
           1. Perform _classScopeEnvRec_.InitializeBinding(_className_, <del>_F_</del><ins>_constructor_</ins>).
-        1. <ins>Let _finisher_ be GetFinisherFromDescriptors(_elementDescriptors_).</ins>
-        1. <ins>Call ? _finisher_(_constructor_).
+        1. <ins>For each _finisher_ in order from _finishers_, do
+          1. <ins>Perform ? Call(_finisher_, *undefined*, « _constructor »).</ins>
         1. Return <del>_F_</del><ins>_constructor_</ins>.
       </emu-alg>
       <emu-note>
@@ -422,11 +426,16 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
       <emu-alg>
         1. Assert: _element_.[[Kind]] is `"property"`.
         1. Let _extras_ be a new empty List.
+        1. Let _finishers_ be a new empty List.
         1. Let _previousDescriptor_ be ? FromElementDescriptor(_element_).
         1. For each _decorator_ in element_.[[Decorators]], in reverse list order do
           1. Let _result_ be ? Call(_decorator_, *undefined*, « _previousDescriptor_ »).
-          1. Let _currentDescriptor_ be ? Get(_result_, `"descriptor"`).
-          1. Let _current_ be ? ToElementDescriptor(_currentDescriptor_).
+          1. Let _currentDescriptor_ be ? Get(_result_, *"descriptor"*).
+          1. Let _current_ be ? ToElementDescriptor(_result_).
+          1. If _current_.[[Finisher]] is not *undefined*, then
+            1. Append _current_.[[Finisher]] to the end of _finishers_.
+            1. Set _current_.[[Finisher]] to *undefined*.
+            1. Note: Finishers are not passed forward to the next decorator.
           1. Let _previousDescriptor_ be ? FromElementDescriptor(_current_).
           1. Let _extrasObject_ be ? Get(_result_, `"extras"`).
           1. If _extrasObject_ is not *undefined*, then:
@@ -437,7 +446,7 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
               1. Let _nextValue_ be ? IteratorValue(_next_).
               1. Append _nextValue_ to the end of _extras_.
         1. Let _extras_ be the result of merging any _extras_ with the same [[Key]] and [[Static]].
-        1. Return the Record {[[Descriptor]]: _previousDescriptor_, [[Extras]]: _extras_}.
+        1. Return the Record {[[Descriptor]]: _previousDescriptor_, [[Extras]]: _extras_, [[Finishers]]: _finishers_}.
       </emu-alg>
       <emu-note>
         <p>Future versions of the spec will create element descriptors with other [[Kind]]s.</p>
@@ -451,11 +460,14 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
       <p>With parameters _decorators_, _constructor_, _heritage_ and _elementDescriptors_.</p>
       <emu-alg>
         1. Let _elements_ be a new empty List.
+        1. Let _finishers_ be a new empty List.
         1. Let _previousConstructor_ be _constructor_.
         1. Let _previousDescriptors_ be _elementDescriptors_.
         1. For each _decorator_ in _decorators_, in reverse list order do
           1. Let _result_ be ? Call(_decorator_, *undefined*, « _previousConstructor_, _heritage_, _previousDescriptors_ »).
           1. Let _previousConstructor_ be ? Get(_result_, `"constructor"`).
+          1. Let _finisher_ be ? Get(_result_, *"finisher"*).
+          1. If _finisher_ is not *undefined*, then append _finisher_ to the end of _finishers_.
           1. Let _elementsObject_ be ? Get(_result_, `"elements"`).
           1. If _elementsObject_ is not *undefined*, then
             1. Let _iterator_ be ? GetIterator(_extrasObject_).
@@ -465,7 +477,7 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
               1. Let _nextValue_ be ? IteratorValue(_next_).
               1. Append _nextValue_ to the end of _elements_.
         1. Let _elements_ be the result of merging any _elements_ with the same [[Key]] and [[Static]].
-        1. Return the Record {[[Constructor]]: _previousConstructor_, [[Elements]]: _elements_}.
+        1. Return the Record {[[Constructor]]: _previousConstructor_, [[Elements]]: _elements_, [[Finishers]]: _finishers_}.
       </emu-alg>
       <emu-note>
         <p>There is a decision-point about what validation rules should be applied to the merging.</p>
@@ -483,6 +495,8 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
         1. Perform ! CreateDataPropertyOrThrow(_obj_, `"isStatic"`, _element_.[[Static]]).
         1. Perform ! CreateDataPropertyOrThrow(_obj_, `"key"`, _element_.[[Key]]).
         1. Perform ! CreateDataPropertyOrThrow(_obj_, `"descriptor"`, ! FromPropertyDescriptor(_element_.[[Descriptor]])).
+        1. If _element_.[[Finisher]] is not *undefined*, then
+          1. Perform ! CreateDataPropertyOrThrow(_obj_, *"finisher"*, _element_.[[Finisher]]).
         1. Return _obj_.
       </emu-alg>
     </emu-clause>
@@ -496,9 +510,14 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
         1. Let _static_ be ToBoolean(? Get(_descriptor_, `"isStatic"`)).
         1. Let _key_ be ? ToString(? Get(_descriptor_, `"key"`)).
         1. Let _descriptor_ be ? ToPropertyDescriptor(? Get(_descriptor_, `"descriptor"`)).
-        1. Return the Record {[[Kind]]: _kind_, [[Static]]: _static_, [[Key]]: _key_, [[Descriptor]]: _descriptor_}.
+        1. Let _hasFinisher_ be ? HasProperty(_descriptor_, 'finisher').
+        1. If _hasFinisher_ is *true*, let _finisher_ be ? Get(_descriptor_, *"key"*).
+        1. Else, let _finisher_ be *undefined*.
+        1. Return the Record {[[Kind]]: _kind_, [[Static]]: _static_, [[Key]]: _key_, [[Descriptor]]: _descriptor_, [[Finisher]]: _finisher_}.
       </emu-alg>
+      <emu-note>
+        <p>Todo: Should probably add validations for having kind, static, and key fields.</p>
+      </emu-note>
     </emu-clause>
-
   </emu-clause>
 </emu-clause>
