--- a/spec.html
+++ b/spec.html
@@ -18798,19 +18798,19 @@
       1. Assert: _element_.[[Kind]] is `"property"`.
       1. Let _extras_ be a new empty List.
       1. Let _previousDescriptor_ be ? FromElementDescriptor(_element_).
-      1. For each _decorator_ in element_.[[Decorators]], in reverse list order do
+      1. For each _decorator_ in _element_.[[Decorators]], in reverse list order do
         1. Let _result_ be ? Call(_decorator_, *undefined*, « _previousDescriptor_ »).
         1. Let _currentDescriptor_ be ? Get(_result_, `"descriptor"`).
         1. Let _current_ be ? ToElementDescriptor(_currentDescriptor_).
         1. Let _previousDescriptor_ be ? FromElementDescriptor(_current_).
         1. Let _extrasObject_ be ? Get(_result_, `"extras"`).
         1. If _extrasObject_ is not *undefined*, then:
-            1. Let _iterator_ be ? GetIterator(_extrasObject_).
-            1. Repeat
-          1. Let _next_ be ? IteratorStep(_iterator_).
-              1. If _next_ is *false*, then break.
-              1. Let _nextValue_ be ? IteratorValue(_next_).
-              1. Append _nextValue_ to the end of _extras_.
+          1. Let _iterator_ be ? GetIterator(_extrasObject_).
+          1. Repeat
+            1. Let _next_ be ? IteratorStep(_iterator_).
+            1. If _next_ is *false*, then break.
+            1. Let _nextValue_ be ? IteratorValue(_next_).
+            1. Append _nextValue_ to the end of _extras_.
       1. Let _extras_ be the result of merging any _extras_ with the same [[Key]] and [[Static]].
       1. Return the Record {[[Descriptor]]: _previousDescriptor_, [[Extras]]: _extras_}.
     </emu-alg>
@@ -18834,9 +18834,9 @@
         1. Let _previousConstructor_ be ? Get(_result_, `"constructor"`).
         1. Let _elementsObject_ be ? Get(_result_, `"elements"`).
         1. If _elementsObject_ is not *undefined*, then:
-            1. Let _iterator_ be ? GetIterator(_extrasObject_).
+          1. Let _iterator_ be ? GetIterator(_extrasObject_).
             1. Repeat
-          1. Let _next_ be ? IteratorStep(_iterator_).
+              1. Let _next_ be ? IteratorStep(_iterator_).
               1. If _next_ is *false*, then break.
               1. Let _nextValue_ be ? IteratorValue(_next_).
               1. Append _nextValue_ to the end of _elements_.
