Make FromElementDescriptor linkable

--- a/spec.html
+++ b/spec.html
@@ -18850,7 +18850,8 @@
     </emu-note>
   </emu-clause>
 
-  <emu-clause id="sec-from-element-descriptor">
+  <emu-clause id="sec-from-element-descriptor"
+              aoid="FromElementDescriptor">
     <h1>FromElementDescriptor</h1>
     <p>With parameter _element_.</p>
     <emu-alg>
