Make ToElementDescriptor linkable

--- a/spec.html
+++ b/spec.html
@@ -18865,7 +18865,8 @@
     </emu-alg>
   </emu-clause>
 
-  <emu-clause id="sec-to-element-descriptor">
+  <emu-clause id="sec-to-element-descriptor"
+              aoid="ToElementDescriptor">
     <h1>ToElementDescriptor</h1>
     <p>With parameter _descriptor_.</p>
     <emu-alg>
