Make DecorateElement linkable

--- a/spec.html
+++ b/spec.html
@@ -18791,7 +18791,8 @@
     </emu-clause>
   </emu-clause>
 
-  <emu-clause id="sec-decorate-element">
+  <emu-clause id="sec-decorate-element"
+              aoid="DecorateElement" >
     <h1>DecorateElement</h1>
     <p>With parameter _element_.</p>
     <emu-alg>
