Make DecorateClass linkable

--- a/spec.html
+++ b/spec.html
@@ -18823,7 +18823,8 @@
     </emu-note>
   </emu-clause>
 
-  <emu-clause id="sec-decorate-class">
+  <emu-clause id="sec-decorate-class"
+              aoid="DecorateClass" >
     <h1>DecorateClass</h1>
     <p>With parameters _decorators_, _constructor_, _heritage_ and _elementDescriptors_.</p>
     <emu-alg>
