--- a/decorators.html
+++ b/decorators.html
@@ -44,7 +44,7 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
     <pre><code class="typescript">
       interface ClassDesciptor {
         klass: Function;
-        parent: Function;
+        parent: Function|undefined;
         members: MemberDescriptor[];
       }
     </code></pre>
