Make Decorate linkable

--- a/spec.html
+++ b/spec.html
@@ -18739,8 +18739,8 @@
     </emu-clause>
   </emu-clause>
 
-
-  <emu-clause id="sec-decorator">
+  <emu-clause id="sec-decorator"
+              aoid="Decorator">
     <h1>Decorator</h1>
     <h2>Syntax</h2>
     <emu-grammar>
