Make DecorateEvaluation linkable

--- a/spec.html
+++ b/spec.html
@@ -18748,7 +18748,8 @@
         `@` LeftHandSideExpression[?Yield]
     </emu-grammar>
 
-    <emu-clause id="sec-decorator-runtime-semantics-decoratorevaluation">
+    <emu-clause id="sec-decorator-runtime-semantics-decoratorevaluation"
+                aoid="DecoratorEvaluation">
       <h1>Runtime Semantics: DecoratorEvaluation</h1>
       <emu-grammar>`@` LeftHandSideExpression[?Yield]</emu-grammar>
       <emu-alg>
