Make DecorateList linkable

--- a/spec.html
+++ b/spec.html
@@ -18760,13 +18760,15 @@
     </emu-clause>
   </emu-clause>
 
-  <emu-clause id="sec-decorator-list">
+  <emu-clause id="sec-decorator-list"
+              aoid="DecoratorList">
     <h1>DecoratorList</h1>
     <h2>Syntax</h2>
     <emu-grammar>
       DecoratorList[Yield] :
         DecoratorList[?Yield]? Decorator[?Yield]
     </emu-grammar>
+
     <emu-clause id="sec-method-definitions-runtime-semantics-decoratorlistevaluation">
       <h1>Runtime Semantics: DecoratorListEvaluation</h1>
       <emu-grammar>DecoratorList[?Yield]? Decorator[?Yield]</emu-grammar>
