Make DecoratorListEvaluation linkable

--- a/spec.html
+++ b/spec.html
@@ -18769,7 +18769,8 @@
         DecoratorList[?Yield]? Decorator[?Yield]
     </emu-grammar>
 
-    <emu-clause id="sec-method-definitions-runtime-semantics-decoratorlistevaluation">
+    <emu-clause id="sec-method-definitions-runtime-semantics-decoratorlistevaluation"
+                aoid="DecoratorListEvaluation">
       <h1>Runtime Semantics: DecoratorListEvaluation</h1>
       <emu-grammar>DecoratorList[?Yield]? Decorator[?Yield]</emu-grammar>
       <emu-alg>
