--- a/decorators.html
+++ b/decorators.html
@@ -17,15 +17,15 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
 
     <p>As of this proposal, decorators can be attached to either classes or class members. An example of such a class might be:</p>
     <pre><code class="javascript">
-      @autobind class Foo {
+      @frozen class Foo {
         @configurable(false) @enumerable(true) method() {}
       }
     </code></pre>
-    <p>Prior to the `class` keyword and prior to method definitions are a new |DecoratorList| production - essentially, a list of |Decorator| productions. The |Decorator| production is `@` followed by a sequence of dotted identifiers (no `[]` access is allowed due to grammar difficulties) and an argument list. Thus, `@foo.bar()` is valid, while `@foo().bar()` is a syntax error.</p>
+    <p>Prior to the `class` keyword and prior to method definitions are a new |DecoratorList| production - essentially, a list of |Decorator| productions. The |Decorator| production is `@` followed by a sequence of dotted identifiers (no `[]` access is allowed due to grammar difficulties) and an argument list. Thus, `@foo.bar()` is valid, while `@foo().bar()` (and `@foo[bar]`) are syntax errors.</p>
     <emu-note>
       <p>The syntax here can be pretty much anything, but this proposal takes a maximally conservative approach. Square brackets can be made unambiguous with a clever cover grammar but the syntax is confusing and error-prone.</p>
     </emu-note>
-    <p>Elements of the |DecoratorList| are evaluated in-order but their resulting decorator functions are evaluated in a bottom-up fashion. Changes by a previous decorator are visible to subsequent decorators.</p>
+    <p>Elements of the |DecoratorList| are evaluated in-order but their resulting decorator functions are evaluated in a bottom-up fashion. The value returned by a decorator becomes the input of the next decorator.</p>
   </emu-intro>
   <emu-intro id="sec-intro-decorator-functions">
     <h1>Decorator Functions</h1>
@@ -80,7 +80,219 @@ contributors: Yehuda Katz, Brian Terlson, Ecma International
 
       Foo.__metadata = 'hi';
     </code></pre>
+
+    <h2>
+    <p>There are a number of examples of real-world usage based on previous drafts of this proposal.</p>
+
+    <p>The `core-decorators` library includes a number of standalone decorators that are intended to
+      work in vanilla JavaScript code</p>
+
+    <p>A deprecation decorator:</p>
+
+    <pre><code>
+      import { deprecate } from 'core-decorators';
+
+      class Person {
+        @deprecate
+        facepalm() {}
+
+        @deprecate('We stopped facepalming')
+        facepalmHard() {}
+
+        @deprecate('We stopped facepalming', { url: 'http://knowyourmeme.com/memes/facepalm' })
+        facepalmHarder() {}
+      }
+
+      let person = new Person();
+
+      person.facepalm();
+      // DEPRECATION Person#facepalm: This function will be removed in future versions.
+
+      person.facepalmHard();
+      // DEPRECATION Person#facepalmHard: We stopped facepalming
+
+      person.facepalmHarder();
+      // DEPRECATION Person#facepalmHarder: We stopped facepalming
+      //
+      //     See http://knowyourmeme.com/memes/facepalm for more details.
+      //
+    </code></pre>
+
+    <p>A throttling decorator:</p>
+
+    <pre><code>
+      import { throttle } from 'core-decorators';
+
+      class Editor {
+
+        content = '';
+
+        @throttle(500, { leading: false })
+        updateContent(content) {
+          this.content = content;
+        }
+      }
+    </code></pre>
+
+    <p>A mixin class decorator:</p>
+
+    <pre><code>
+      import { mixin } from 'core-decorators';
+
+      const SingerMixin = {
+        sing(sound) {
+          alert(sound);
+        }
+      };
+
+      const FlyMixin = {
+        // All types of property descriptors are supported
+        get speed() {},
+        fly() {},
+        land() {}
+      };
+
+      @mixin(SingerMixin, FlyMixin)
+      class Bird {
+        singMatingCall() {
+          this.sing('tweet tweet');
+        }
+      }
+
+      var bird = new Bird();
+      bird.singMatingCall();
+      // alerts "tweet tweet"
+    </code></pre>
+
+    <p>A decorator that using `console.time` to time a function:</p>
+
+    <pre><code>
+      class Bird {
+        @time('sing')
+        sing() {
+        }
+      }
+
+      var bird = new Bird();
+      bird.sing(); // console.time label will be 'sing-0'
+      bird.sing(); // console.time label will be 'sing-1'
+    </code></pre>
   </emu-intro>
+
+  <h2>Frameworks</h2>
+
+  <p>Several frameworks have also adopted decorators in various forms.</p>
+
+  <p>Aurelia:</p>
+
+  <code><pre>
+    import { computedFrom } from 'aurelia-framework';
+
+    export class Welcome{
+      firstName = 'John';
+      lastName = 'Doe';
+
+      @computedFrom('firstName', 'lastName')
+      get fullName(){
+        return `${this.firstName} ${this.lastName}`;
+      }
+    }
+  </pre></code>
+
+  <code><pre>
+    import { customElement } from 'aurelia-framework';
+
+    @customElement('nav-bar')
+    export class NavBar {}
+  </pre></code>
+
+  <code><pre>
+    @useShadowDOM
+    @customElement('my-expander')
+    export class Expander {
+      @bindable isExpanded = false;
+      @bindable header;
+    }
+  </pre></code>
+
+  <p>Ember:</p>
+
+  <code><pre>
+    import Ember from 'ember';
+    import computed from 'ember-computed-decorators';
+
+    export default class extends Ember.Component {
+      @computed('first', 'last')
+      name(first, last) {
+        return `${first} ${last}`;
+      }
+    };
+  </pre></code>
+
+  <code><pre>
+    import Ember from 'ember';
+    import computed, { readOnly } from 'ember-computed-decorators';
+
+    export default class extends Ember.Component {
+      @readOnly
+      @computed('first', 'last')
+      name(first, last) {
+        return `${first} ${last}`;
+      }
+    };
+  </pre></code>
+
+  <pre><code>
+    import DS from 'ember-data';
+    import {
+      attr,
+      hasMany
+    } from "ember-computed-decorators/ember-data";
+
+    export default class extends DS.Model {
+      @attr firstName,
+      @hasMany users
+    };
+  </code></pre>
+
+  <pre><code>
+    import Ember from 'ember';
+    import { alias } from 'ember-computed-decorators';
+    export default class extends Ember.Component {
+      person: {
+        first: 'Joe'
+      }
+
+      @alias('person.first') firstName
+    };
+  </pre></code>
+
+  <pre><code>
+    import Ember from 'ember';
+    import { intersect } from 'ember-computed-decorators';
+
+    export default class extends Ember.Component {
+      likes = [ 'tacos', 'puppies', 'pizza' ];
+      foods = [ 'tacos', 'pizza' ];
+
+      @intersect('likes', 'foods') favoriteFoods; // ['tacos', 'pizza']
+    };
+  </code></pre>
+
+  <p>Angular (using TypeScript):</p>
+
+  <pre><code>
+    @Component({
+      selector: 'talk-cmp',
+      directives: [FormattedRating, WatchButton, RateButton],
+      templateUrl: 'talk_cmp.html'
+    })
+    class TalkCmp {
+      @Input() talk: Talk;
+      @Output() rate: EventEmitter;
+      // ...
+    }
+  </code></pre>
 </emu-intro>
 
 <emu-clause id="sec-syntax">
